--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -51,7 +51,7 @@ services:
     #- /media/rainer/_data/30-projects/f1tenth/f1tenth_docker_agent_pln/pln5:/catkin_ws/src/pln5
     #image: parkinglotnerds/race7:version_0.1
     #
-    image: hirohaku21/vdc2021_Nov:0.1
+    image: hirohaku21/vdc2021_nov:0.1
     #entrypoint: ./start_test_client.sh
     #entrypoint: bash
     #entrypoint: python /root/rC3car/test_client.py
