--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   agent1:
-    container_name: huangwanpeng_ahoy
+    container_name: yourname_ahoy
     build:
       context: .
       dockerfile: agent.Dockerfile
@@ -10,4 +10,4 @@ services:
     tty: true        # docker run -t
     ports:
       - "8887:8887"
-    image: huangwanpeng/race2022_June:0.1
+    image: yourname/race2022_June:0.1
